--- a/app/src/main/res/anim/popup_anim_exit.xml
+++ b/app/src/main/res/anim/popup_anim_exit.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set xmlns:android="http://schemas.android.com/apk/res/android"
-	android:interpolator="@android:anim/accelerate_interpolator">
-         <translate 
-             android:fromXDelta="0"
-             android:toXDelta="100%"
-              android:duration="500"
-             />
-	</set>
+<set xmlns:android="http://schemas.android.com/apk/res/android" >
+
+	<!-- 定义从右向左动画退出动画 -->
+	<translate
+		android:duration="500"
+		android:fromXDelta="0"
+		android:toXDelta="-100%" />
+
+</set>
