--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,7 +8,7 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
     <style name="PopupAnimation" parent="android:Animation" mce_bogus="1">
-        <item name="android:windowEnterAnimation">@anim/popup_anim</item>
-        <item name="android:windowExitAnimation">@anim/popup_anim_exit</item>
+        <item name="android:windowEnterAnimation">@anim/popup_anim_exit</item>
+        <item name="android:windowExitAnimation">@anim/popup_anim</item>
     </style>
 </resources>
