--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="colortool">#787878</color>
     <color name="colorblack">#000</color>
     <color name="colorbg">#f6f6f6</color>
+    <color name="colorgray">#bfbfbf</color>
 </resources>
