--- a/app/src/main/res/layout/popup.xml
+++ b/app/src/main/res/layout/popup.xml
@@ -26,7 +26,7 @@
             android:layout_toRightOf="@+id/img_touxiang"
             android:singleLine="true"
             android:text="贰悫"
-            android:textColor="@color/colorblack"
+            android:textColor="@color/color_black"
             android:textSize="18dp" />
 
         <TextView
@@ -38,14 +38,14 @@
             android:layout_toRightOf="@+id/img_touxiang"
             android:singleLine="true"
             android:text="unknown@163.com"
-            android:textColor="@color/colortool"
+            android:textColor="@color/color_tool"
             android:textSize="15dp" />
     </RelativeLayout>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="0.8dp"
-        android:background="@color/colorLine"></View>
+        android:background="@color/color_line"></View>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -63,7 +63,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@+id/slide_home_img"
-            android:textColor="@color/colortool"
+            android:textColor="@color/color_tool"
             android:textSize="16dp"
             android:layout_centerVertical="true"
             android:layout_marginLeft="20dp"
@@ -73,7 +73,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="0.8dp"
-        android:background="@color/colorLine"></View>
+        android:background="@color/color_line"></View>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="48dp">
@@ -90,7 +90,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@+id/slide_setting_img"
-            android:textColor="@color/colortool"
+            android:textColor="@color/color_tool"
             android:textSize="16dp"
             android:layout_centerVertical="true"
             android:layout_marginLeft="20dp"
@@ -100,7 +100,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="0.8dp"
-        android:background="@color/colorLine"></View>
+        android:background="@color/color_line"></View>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="48dp">
@@ -117,7 +117,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@+id/slide_theme_img"
-            android:textColor="@color/colortool"
+            android:textColor="@color/color_tool"
             android:textSize="16dp"
             android:layout_centerVertical="true"
             android:layout_marginLeft="20dp"
@@ -127,7 +127,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="0.8dp"
-        android:background="@color/colorLine"></View>
+        android:background="@color/color_line"></View>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="48dp">
@@ -144,7 +144,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@+id/slide_packge_img"
-            android:textColor="@color/colortool"
+            android:textColor="@color/color_tool"
             android:textSize="16dp"
             android:layout_centerVertical="true"
             android:layout_marginLeft="20dp"
@@ -154,7 +154,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="0.8dp"
-        android:background="@color/colorLine"></View>
+        android:background="@color/color_line"></View>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="48dp">
@@ -171,7 +171,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@+id/slide_feedback_img"
-            android:textColor="@color/colortool"
+            android:textColor="@color/color_tool"
             android:textSize="16dp"
             android:layout_centerVertical="true"
             android:layout_marginLeft="20dp"
@@ -181,7 +181,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="0.8dp"
-        android:background="@color/colorLine"></View>
+        android:background="@color/color_line"></View>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="48dp">
@@ -198,7 +198,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@+id/slide_check_img"
-            android:textColor="@color/colortool"
+            android:textColor="@color/color_tool"
             android:textSize="16dp"
             android:layout_centerVertical="true"
             android:layout_marginLeft="20dp"
@@ -208,7 +208,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="0.8dp"
-        android:background="@color/colorLine"></View>
+        android:background="@color/color_line"></View>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="48dp">
@@ -225,7 +225,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@+id/slide_about_img"
-            android:textColor="@color/colortool"
+            android:textColor="@color/color_tool"
             android:textSize="16dp"
             android:layout_centerVertical="true"
             android:layout_marginLeft="20dp"
@@ -235,7 +235,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="0.8dp"
-        android:background="@color/colorLine"></View>
+        android:background="@color/color_line"></View>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="48dp">
@@ -252,7 +252,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@+id/slide_exit_img"
-            android:textColor="@color/colortool"
+            android:textColor="@color/color_tool"
             android:textSize="16dp"
             android:layout_centerVertical="true"
             android:layout_marginLeft="20dp"
@@ -262,7 +262,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="0.8dp"
-        android:background="@color/colorLine"></View>
+        android:background="@color/color_line"></View>
 
 
 </LinearLayout>
