--- a/app/src/main/res/layout/fg_listitem.xml
+++ b/app/src/main/res/layout/fg_listitem.xml
@@ -136,7 +136,7 @@
             <View
                 android:layout_width="fill_parent"
                 android:layout_height="0.01dp"
-                android:background="@color/colorgray"
+                android:background="@color/color_gray"
                 />
             <LinearLayout
                 android:orientation="horizontal"
