--- a/app/src/main/res/layout/fg_listitem.xml
+++ b/app/src/main/res/layout/fg_listitem.xml
@@ -134,7 +134,7 @@
             <View
                 android:layout_width="fill_parent"
                 android:layout_height="0.01dp"
-                android:background="@color/colorgray" />
+                android:background="@color/color_gray" />
 
             <LinearLayout
                 android:layout_width="match_parent"
