分类界面相关文件

--- a/app/src/main/res/layout/item_type_listview.xml
+++ b/app/src/main/res/layout/item_type_listview.xml
@@ -3,10 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
-    android:layout_marginLeft="5dp"
-    android:layout_marginRight="5dp"
-    android:layout_marginTop="10dp">
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/tv_listview"
@@ -14,6 +11,9 @@
         android:layout_height="wrap_content"
         tools:text="应用"
         android:layout_marginBottom="10dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="10dp"
         android:textSize="16sp"
         android:textColor="@color/color_black"/>
 
@@ -21,7 +21,9 @@
         android:id="@+id/gridview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:numColumns="3"
-        android:verticalSpacing="5dp">
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        tools:listitem="@layout/item_type_gridview"
+        android:numColumns="3">
     </com.appstore.widget.NoScrollGridView>
 </LinearLayout>
