--- a/app/src/main/res/layout/item_type_gridview.xml
+++ b/app/src/main/res/layout/item_type_gridview.xml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/rl_gridview"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@drawable/gridview_background">
 
     <ImageView
         android:id="@+id/img_app"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:src="@mipmap/ic_launcher" />
+        android:layout_marginTop="20dp"
+        android:layout_centerHorizontal="true"
+        tools:src="@mipmap/ic_launcher" />
 
     <TextView
         android:id="@+id/tv_apptype"
@@ -16,7 +20,10 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/img_app"
         android:layout_centerHorizontal="true"
-        android:text="休闲"
+        android:layout_marginTop="2dp"
+        android:layout_marginBottom="20dp"
+        tools:text="休闲"
+        android:textColor="@color/color_787878"
         android:textSize="14sp" />
 
 </RelativeLayout>
