--- a/app/src/main/res/layout/item_type_gridview.xml
+++ b/app/src/main/res/layout/item_type_gridview.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/img_app"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_marginTop="20dp"
         android:layout_centerHorizontal="true"
         tools:src="@mipmap/ic_launcher" />
