--- a/app/src/main/res/layout/fragment_rank.xml
+++ b/app/src/main/res/layout/fragment_rank.xml
@@ -4,7 +4,9 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
     <com.appstore.tagview.TagView
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
@@ -19,4 +21,5 @@
         app:textPaddingRight="10dp"
         app:textPaddingTop="3dp">
  </com.appstore.tagview.TagView>
+</ScrollView>
 </LinearLayout>
