--- a/app/src/main/res/layout/fragment_subject.xml
+++ b/app/src/main/res/layout/fragment_subject.xml
@@ -2,8 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="专题"/>
+  <ListView
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:divider="@null"
+      android:id="@+id/subject_listview"></ListView>
 </LinearLayout>
