--- a/app/src/main/res/layout/activity_app_details.xml
+++ b/app/src/main/res/layout/activity_app_details.xml
@@ -1,9 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
+    android:background="@color/color_white"
     android:layout_height="match_parent">
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="应用详情"/>
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="54dp"
+        android:background="@color/color_bg">
+
+        <ImageView
+            android:id="@+id/slide_menu"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:src="@mipmap/ic_about" />
+
+        <ImageView
+            android:id="@+id/id_launcher"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="15dp"
+            android:layout_toRightOf="@+id/slide_menu"
+            android:src="@mipmap/ic_launcher1" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:layout_toRightOf="@+id/id_launcher"
+            android:text="应用市场"
+            android:textColor="@color/color_black"
+            android:textSize="18dp" />
+    </RelativeLayout>
+
 </LinearLayout>
