--- a/app/src/main/res/layout/activity_app_details.xml
+++ b/app/src/main/res/layout/activity_app_details.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@color/color_white"
-    android:layout_height="match_parent">
+    android:orientation="vertical">
+
     <RelativeLayout
+        android:id="@+id/deatils_01"
         android:layout_width="fill_parent"
         android:layout_height="54dp"
         android:background="@color/color_bg">
 
         <ImageView
-            android:id="@+id/slide_menu"
+            android:id="@+id/back"
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:layout_centerVertical="true"
@@ -22,7 +25,7 @@
             android:layout_height="40dp"
             android:layout_centerVertical="true"
             android:layout_marginLeft="15dp"
-            android:layout_toRightOf="@+id/slide_menu"
+            android:layout_toRightOf="@+id/back"
             android:src="@mipmap/ic_launcher1" />
 
         <TextView
@@ -36,4 +39,269 @@
             android:textSize="18dp" />
     </RelativeLayout>
 
-</LinearLayout>
+    <ScrollView
+        android:id="@+id/deatils_02"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/deatils_03"
+        android:layout_below="@+id/deatils_01">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="68dp"
+                android:layout_marginTop="8dp">
+
+                <ImageView
+                    android:id="@+id/details_icon"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="18dp"
+                    android:src="@mipmap/icons" />
+
+                <TextView
+                    android:id="@+id/details_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignTop="@+id/details_icon"
+                    android:layout_marginLeft="16dp"
+                    android:layout_toRightOf="@+id/details_icon"
+                    android:text="唱吧"
+                    android:textColor="@color/color_black"
+                    android:textSize="16dp" />
+
+                <RatingBar
+                    android:id="@+id/details_rate"
+                    style="@style/fiveRatingBar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/details_name"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_toRightOf="@+id/details_icon"
+                    android:isIndicator="true"
+                    android:numStars="5"
+                    android:rating="4" />
+
+            </RelativeLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:weightSum="2">
+
+                <TextView
+                    android:id="@+id/details_downloadNum"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="15dp"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical"
+                    android:text="下载量：200万+"
+                    android:textColor="@color/color_tool" />
+
+                <TextView
+                    android:id="@+id/details_version"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="15dp"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical"
+                    android:text="版本：4.1.9"
+                    android:textColor="@color/color_tool" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:weightSum="2">
+
+                <TextView
+                    android:id="@+id/details_date"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="15dp"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical"
+                    android:text="时间：2014-04-24"
+                    android:textColor="@color/color_tool" />
+
+                <TextView
+                    android:id="@+id/details_size"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="15dp"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical"
+                    android:text="大小：3.70\tMB"
+                    android:textColor="@color/color_tool" />
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0.6dp"
+                android:layout_marginTop="4dp"
+                android:background="@color/color_line"></View>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/details_safe0"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="15dp"
+                    android:src="@mipmap/safeicon0" />
+
+                <ImageView
+                    android:id="@+id/details_safe1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="15dp"
+                    android:src="@mipmap/safeicon1" />
+
+                <ImageView
+                    android:id="@+id/details_safe2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="15dp"
+                    android:src="@mipmap/safeicon2" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <View
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1" />
+
+                <ImageView
+                    android:id="@+id/detals_down"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginRight="15dp"
+                    android:padding="5dp"
+                    android:src="@mipmap/arrow_down" />
+            </LinearLayout>
+
+            <com.appstore.widget.NoScrollListView
+                android:id="@+id/safe_listview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:divider="@null"></com.appstore.widget.NoScrollListView>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0.6dp"
+                android:layout_marginTop="4dp"
+                android:background="@color/color_line"></View>
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="5dp"
+        android:text="简介"
+        android:textColor="@color/color_black"
+        android:textSize="18dp" />
+    <ImageView
+        android:id="@+id/detals_down1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="15dp"
+        android:padding="5dp"
+        android:src="@mipmap/arrow_down" />
+</RelativeLayout>
+
+
+            <TextView
+                android:id="@+id/details_des"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:lineSpacingExtra="8dp"
+                android:maxLines="5"
+                android:text="有缘是时下最受大众单身男女亲睐的婚恋交友软件。有缘网专注于通过轻松、易用的大众婚恋交友服务，帮助中国最广泛的单身男女找到理想对象。目前已有1亿3632万单身男女在有缘网上找对象。免费下载，立即注册，更拥有同城交友、自定义搜索、异性推荐等贴心、便捷、高效的婚恋交友服务！找对象，上有缘网！人多机会多，还怕找不到？"
+                android:textColor="@color/color_tool"
+                android:textSize="16dp" />
+
+            <TextView
+                android:id="@+id/details_aurth"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="15dp"
+                android:text="有缘网" />
+
+
+        </LinearLayout>
+
+    </ScrollView>
+
+    <RelativeLayout
+        android:id="@+id/deatils_03"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        android:background="#272727"
+        android:padding="6dp">
+
+        <Button
+            android:id="@+id/details_collect"
+            android:layout_width="64dp"
+            android:layout_height="match_parent"
+            android:layout_centerVertical="true"
+            android:background="#626262"
+            android:text="收藏"
+            android:textColor="@color/color_white"
+            android:textSize="18dp"></Button>
+
+        <Button
+            android:id="@+id/details_download"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="4dp"
+            android:layout_toLeftOf="@+id/details_share"
+            android:layout_toRightOf="@+id/details_collect"
+            android:background="@color/color_main"
+            android:text="下载"
+            android:textColor="@color/color_white"
+            android:textSize="18sp" />
+
+        <Button
+            android:id="@+id/details_share"
+            android:layout_width="64dp"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:background="#626262"
+            android:text="分享"
+            android:textColor="@color/color_white"
+            android:textSize="18dp"></Button>
+    </RelativeLayout>
+</RelativeLayout>
