--- a/app/src/main/res/layout/fg_listitem.xml
+++ b/app/src/main/res/layout/fg_listitem.xml
@@ -6,7 +6,7 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="120dp"
         android:weightSum="1">
 
         <LinearLayout
@@ -26,7 +26,7 @@
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="0.8"
+                android:layout_weight="0.7"
                 android:weightSum="1">
 
                 <LinearLayout
@@ -56,7 +56,7 @@
                     android:orientation="vertical"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="0.7"
+                    android:layout_weight="0.6"
                     android:weightSum="1">
 
                     <LinearLayout
@@ -70,7 +70,8 @@
                             android:layout_height="wrap_content"
                             android:textAppearance="?android:attr/textAppearanceMedium"
                             android:text="Medium Text"
-                            android:layout_marginTop="5dp"
+                            android:layout_marginLeft="5dp"
+                            android:layout_marginTop="10dp"
                             android:id="@+id/mfg_tv_appname" />
                     </LinearLayout>
 
@@ -78,11 +79,14 @@
                         android:orientation="horizontal"
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
-                        android:layout_weight="0.2">
+                        android:layout_weight="0.3">
 
                         <RatingBar
                             android:layout_width="wrap_content"
-                            android:layout_height="10dp"
+                            android:layout_height="15dp"
+                            android:layout_marginLeft="5dp"
+                            android:layout_marginTop="5dp"
+                            style="?android:attr/ratingBarStyleSmall"
                             android:id="@+id/mfg_rb_ratingBar" />
                     </LinearLayout>
 
@@ -90,12 +94,13 @@
                         android:orientation="horizontal"
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
-                        android:layout_weight="0.4">
+                        android:layout_weight="0.3">
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textAppearance="?android:attr/textAppearanceMedium"
+                            android:textSize="11sp"
+                            android:layout_marginLeft="5dp"
                             android:text="Medium Text"
                             android:layout_marginTop="5dp"
                             android:id="@+id/mfg_tv_appsize" />
@@ -105,7 +110,7 @@
                 <LinearLayout
                     android:orientation="vertical"
                     android:layout_width="0dp"
-                    android:layout_weight="0.15"
+                    android:layout_weight="0.25"
                     android:layout_height="match_parent">
 
                     <RelativeLayout
@@ -113,10 +118,11 @@
                         android:layout_height="fill_parent">
 
                         <ImageView
-                            android:layout_width="36dp"
-                            android:layout_height="36dp"
-                            android:id="@+id/mfg_img_download"
-                            android:src="@mipmap/ic_launcher"
+                            android:layout_width="45dp"
+                            android:layout_height="45dp"
+                            android:id="@+id/fg_img_download"
+                            android:src="@mipmap/ic_download"
+                            android:paddingBottom="3dp"
                             android:layout_centerVertical="true"
                             android:layout_centerHorizontal="true" />
 
@@ -126,9 +132,8 @@
                             android:textSize="12sp"
                             android:text="@string/app_download"
                             android:id="@+id/textView"
-                            android:layout_below="@+id/mfg_img_download"
-                            android:layout_marginTop="3dp"
-                            android:layout_centerHorizontal="true" />
+                            android:layout_centerHorizontal="true"
+                            android:layout_below="@+id/fg_img_download" />
                     </RelativeLayout>
                 </LinearLayout>
             </LinearLayout>
@@ -142,14 +147,15 @@
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="0.2">
+                android:layout_weight="0.3">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:textSize="13sp"
                     android:text="Small Text"
                     android:layout_marginLeft="5dp"
+                    android:layout_marginTop="3dp"
                     android:id="@+id/mfg_tv_intro" />
             </LinearLayout>
         </LinearLayout>
