--- a/app/src/main/res/layout/fragment_apps.xml
+++ b/app/src/main/res/layout/fragment_apps.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ListView
+    <com.appstore.fragment.XListView2
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/ap_listview"
