--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -3,13 +3,14 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ListView
-        android:layout_width="match_parent"
+    <com.appstore.fragment.XListView2
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/gf1_listView"
         android:dividerHeight="5dp"
         android:divider="#eeeeee"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        />
     <ProgressBar
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
