--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,66 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:focusable="true"
     android:focusableInTouchMode="true"
-
+    android:orientation="vertical"
     android:weightSum="1">
 
     <ScrollView
+        android:id="@+id/scrollView"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:id="@+id/scrollView" >
+        android:layout_height="fill_parent">
 
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
             <LinearLayout
-                android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="180dp">
-
-
-
+                android:layout_height="180dp"
+                android:orientation="vertical">
 
                 <com.jude.rollviewpager.RollPagerView
+                    android:id="@+id/viewpager"
                     android:layout_width="wrap_content"
                     android:layout_height="180dp"
-                    app:rollviewpager_play_delay="3000"
-                    android:id="@+id/viewpager"/>
-
+                    app:rollviewpager_play_delay="3000" />
 
             </LinearLayout>
 
             <LinearLayout
-                android:orientation="vertical"
                 android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:focusable="true"
                 android:focusableInTouchMode="true"
-                android:layout_height="match_parent">
-
-
-
+                android:orientation="vertical">
 
                 <com.appstore.fragment.XListView
-
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
                     android:id="@+id/mf_mainlistview"
-                    android:dividerHeight="5dp"
-                    android:divider="#eeeeee"
-                   />
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:divider="@null" />
 
 
                 <ProgressBar
+                    android:id="@+id/mf_progressbar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:id="@+id/mf_progressbar" />
+                    android:layout_gravity="center" />
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
