--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -38,7 +38,7 @@
                 android:focusableInTouchMode="true"
                 android:orientation="vertical">
 
-                <com.appstore.fragment.XListView
+                <com.appstore.widget.XListView
                     android:id="@+id/mf_mainlistview"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
