--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <com.appstore.fragment.XListView2
+    <com.appstore.widget.XListView2
         android:id="@+id/gf1_listView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
