应用安装完成 点击安装 安装后 点击打开更新

--- a/app/src/main/res/layout/fg_listitem.xml
+++ b/app/src/main/res/layout/fg_listitem.xml
@@ -144,7 +144,7 @@
                             app:textSize="3dp" />
 
                         <TextView
-                            android:id="@+id/textView_down"
+                            android:id="@+id/tv_downpos"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_below="@+id/fg_img_download"
